# tuidal

./: README.md  __init__.py  app.py  models.py  pyproject.toml
services/: player_backend.py  tidal_service.py
styles/: player.tcss
tidal_tui/: __main__.py  app.py  config.py  input.py  theme.py
tidal_tui/services/: __init__.py  player_backend.py
tidal_tui/styles/: player.tcss
tidal_tui/ui/: __init__.py  layout.py  now_playing.py  playlist_panel.py  track_panel.py
tidal_tui/widgets/: now_playing.py  playlist_browser.py  track_list.py
widgets/: __init__.py  now_playing.py  playlist_browser.py  track_list.py
