[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidal-tui"
version = "0.2.0"
description = "🎵 Terminal music player for Tidal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "jhndbr", email = ""}
]
keywords = ["tidal", "music", "player", "terminal", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0",
    "readchar>=4.0",
    "tidalapi>=0.6.11",
    "python-mpv>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
tidal-tui = "tidal_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["tidal_tui"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
